ipc/ipdl/test/ipdl/error/structUnknownField.ipdl
struct S {
    Foobers i;
};

protocol structUnknownField {
child: async __delete__(S s);
};
